--- a/css/globals.css
+++ b/css/globals.css
@@ -8,6 +8,8 @@ body {
   align-items: center;
 
   background-color: #fafafa;
+  background: #fafafa;
+  font-size: 14px;
   font-family: "open sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
