--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300, 400,600");
 @import "reset.css";
 @import "globals.css";
 @import "footer.css";
 @import "header.css";
+/**@import "index_test.css";**/
+@import "login.css";
