--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,6 @@
 @import "header.css";
 /**@import "index_test.css";**/
 @import "login.css";
+@import "explore.css";
+@import "feed.css";
+@import "mobile.css";
